Hacky, but update thumb to have name and rating, runtime.. still need to fix the alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,6 +88,12 @@ body {
   margin: 10px 25px 0px 25px;
 }
 
+#thumb_details {
+  font-family: "Roboto", "OpenSans";
+  font-weigth: bold;
+  font-size: 5px;
+}
+
 .header_tab {
   float:left;
   height: 31px;
